--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ springdoc:
   group-configs:
     - group: 'default'
       paths-to-match: '/**'
-      packages-to-scan: com.zazhi.shiro_demo.controller
+      packages-to-scan: com.zazhi.shiro_jwt.controller
 # knife4j的增强配置，不需要增强可以不配
 knife4j:
   enable: true
